# 620Q-Demo

./: .gitignore  CMakeLists.txt  README.md  build.sh
libs/opencv/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
libs/opencv/script/: build_opencv4.sh
src/: Application.cpp  Application.hpp  ivps_hal.c  ivps_hal.h  main.c  main.cpp  vin_ivps_venc_rtsp.c  vin_ivps_venc_rtsp.h
